Version CVS HEAD (?)

  * General changes:
    - Refactoring: moved the independent code from
      the Gigasampler format engine to base classes
    - command line option '--profile' is currently disabled, since the
      respective profiling code is currently broken
    - Introduced support for optional environment variable
      "LINUXSAMPLER_PLUGIN_DIR" which allows to override the directory
      where the sampler shall look for instrument editor plugins
      (patch by Luis Garrido, slightly modified).

  * Gigasampler format engine:
    - implemented the "round robin keyboard" dimension
    - fixed round robin and random dimensions for cases when number of
      dimension zones is not a power of two
    - made round robin use a counter for each region instead of each
      key

  * SFZ format engine:
    - Initial implementation (not usable yet)
    - added support for v2 multiple stage envelope generators
    - added a fine-tuned v1 envelope generator instead of using the
      one from the gig engine
    - fixed memory leak and memory handling errors
    - added support for trigger=first, trigger=legato and sw_previous
    - allow non-numerical key values ("C#4" for example)
    - "key" opcode now sets pitch_keycenter too
    - fixed error when unloading instrument with same sample used by
      multiple regions
    - added some opcode aliases, like loopmode for loop_mode, to be
      more compatible
    - added support for trigger=release and rt_decay
    - added support for off_mode=normal
    - added support for random, seq_position, seq_length and volume
    - added v1 LFO opcodes to parser (no support in engine yet)
    - added support for amp_veltrack and amp_velcurve_N
    - fine-tuned the default velocity curve

  * SoundFont format engine:
    - Initial implementation (not usable yet)

  * Host plugins:
    - AU bugfix: failed to destroy its audio/MIDI devices
    - Listen to all interfaces on Mac OS X (INADDR_ANY)